<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/id_dev"
        android:text="@string/developer"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_name"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_phone"
        android:text="@string/phone"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_library"
        android:text="@string/library"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_lib_1"
        android:text="@string/library_1"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_lib_2"
        android:text="@string/library_2"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_lib_3"
        android:text="@string/library_3"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_lib_4"
        android:text="@string/library_4"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_lib_5"
        android:text="@string/library_5"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_lib_6"
        android:text="@string/library_6"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_lib_7"
        android:text="@string/library_7"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>
</RelativeLayout>